<!--
  ~ Copyright (c) 2018-2019 AppHouseBD. All rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">AppHouseBD Library</string>
    <string name="apphousebd">AppHouseBD</string>
    <string name="facebook">facebook</string>
    <string name="instagram">instagram</string>
    <string name="linkedin">linkedin</string>
    <string name="website">website</string>
    <string name="email">email</string>
</resources>
